--- a/src/main/resources/templates/emailwelcome.html
+++ b/src/main/resources/templates/emailwelcome.html
@@ -13,11 +13,13 @@
                 <!-- Logo -->
                 <tr>
                     <td align="center" style="
-                          padding: 30px;
-                          background: linear-gradient(135deg, #ff5a7d, #3870ff);
+                          padding: 20px;
+                          /*background: linear-gradient(135deg, #ff5a7d, #3870ff);*/
+                          background: linear-gradient(135deg, rgba(255, 90, 125, 0.3), rgba(56, 112, 255, 0.3));
+
                           color: white;">
-                        <img src="cid:shealthcare-logo" alt="SHeathCare Logo" width="300" style="display: block; margin-bottom: 10px;">
-                        <p style="font-size: 16px; margin: 0;">Chào mừng bạn đến với SHeathCare!</p>
+                        <img src="https://media.discordapp.net/attachments/1373906364270645271/1380195143763755008/logo-removebg-preview.png?ex=68479ba5&is=68464a25&hm=e54363f3bfb5bb4316c64cb618f83a3014971c0607f2dfc7e7357db99f53ec54&=&format=webp&quality=lossless&width=790&height=1262" alt="SHeathCare Logo" width="80" style="display: block; margin-bottom: 10px;">
+                        <p style="font-size: 25px; font-weight: bold;">Chào mừng bạn đến với SHeathCare!</p>
                     </td>
                 </tr>
 
