--- a/src/main/resources/templates/emailZoom.html
+++ b/src/main/resources/templates/emailZoom.html
@@ -16,7 +16,7 @@
                           padding: 20px;
                           background: linear-gradient(135deg, rgba(255, 90, 125, 0.3), rgba(56, 112, 255, 0.3));
                           color: white;">
-                        <img src="https://media.discordapp.net/attachments/1373906364270645271/1380195143763755008/logo-removebg-preview.png?ex=68479ba5&is=68464a25&hm=e54363f3bfb5bb4316c64cb618f83a3014971c0607f2dfc7e7357db99f53ec54&=&format=webp&quality=lossless&width=790&height=1262" alt="SHeathCare Logo" width="80" style="display: block; margin-bottom: 10px;">
+                        <img src="https://14.225.198.16/image/logo.png" alt="SHeathCare Logo" width="80" style="display: block; margin-bottom: 10px; border-radius: 8px;">
                         <p style="font-size: 25px; font-weight: bold;">Thông tin buổi tư vấn của bạn</p>
                     </td>
                 </tr>
